# Lexgent

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
lexagent/: __init__.py  config.py  schemas.py
lexagent/agents/: __init__.py  base.py  clause_retriever.py  context_manager.py  draft_generator.py  orchestrator.py
lexagent/data/: clauses.json
lexagent/retrieval/: __init__.py  faiss_store.py
lexagent/templates/: msa_template.md
scripts/: run_demo.py
tests/: test_pipeline.py
